feat: Add hero section

--- a/src/index.html
+++ b/src/index.html
@@ -45,5 +45,17 @@
         </button>
       </div>
     </header>
+
+    <!-- HERO -->
+    <section class="hero">
+      <div class="container-content">
+        <div class="hero-content">
+          <h1 class="h1">Welcome to Worklyfe Office</h1>
+          <button class="hero-content__cta | btn btn--large btn--primary">
+            See the benefits
+          </button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
