feat: Add faq section

--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,39 @@
         </div>
       </div>
     </section>
+
+    <!-- FAQ -->
+    <section class="faq">
+      <div class="container-content">
+        <div class="even-columns horizontal-align-center vertical-align-center">
+          <div class="faq-images">
+            <div class="faq-img faq-img--left">
+              <img
+                src="/src/assets/images/faq-1.jpg"
+                alt="People talking in a building"
+              />
+            </div>
+            <div class="faq-img faq-img--right">
+              <img
+                src="/src/assets/images/faq-2.jpg"
+                alt="Man working on notebook"
+              />
+            </div>
+          </div>
+          <div class="faq-content | flow" style="--flow-spacer: 2.4rem">
+            <h2 class="faq-content__title">Check your new office</h2>
+            <p class="faq-content__paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+              eget lectus urna. Nulla magna tortor, bibendum in molestie sed,
+              gravida nec felis. Sed id egestasegestas risus, ut imperdiet
+              augue.
+            </p>
+            <button class="faq-content__cta | btn btn--large">
+              View the FAQ
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
