feat: Add cta section

--- a/src/index.html
+++ b/src/index.html
@@ -91,5 +91,19 @@
         </div>
       </div>
     </section>
+
+    <!-- CTA -->
+    <section class="cta">
+      <div class="container-content flow">
+        <h2 class="cta__title">Become more than you are</h2>
+        <p class="cta__subtitle wide">
+          Staying productive is great fun and keeps you healthy. Check out how
+          you can join in.
+        </p>
+        <button class="cta__cta | btn btn--primary btn--large">
+          Let's do it
+        </button>
+      </div>
+    </section>
   </body>
 </html>
