feat: Add testimonials template and styles

--- a/src/index.html
+++ b/src/index.html
@@ -105,5 +105,35 @@
         </button>
       </div>
     </section>
+
+    <!-- TESTIMONIALS -->
+    <section class="testimonials text-secondary-1">
+      <div class="container-content">
+        <div class="testimonials-heading">
+          <img
+            class="icon display-sm-and-up"
+            src="/src/assets//icons/quote.svg"
+            alt=""
+          />
+          <h2 class="testimonials-heading__title">
+            Real Stories from Our Staff
+          </h2>
+          <p class="testimonials-heading__paragraph">
+            Be inspired with these experiences.
+          </p>
+        </div>
+        <div class="swiper">
+          <div
+            data-id="cards-container"
+            class="swiper-wrapper testimonials-cards"
+          ></div>
+          <div class="swiper-scrollbar"></div>
+        </div>
+
+        <button data-id="cards-refetch" class="btn btn--primary">
+          Refetch
+        </button>
+      </div>
+    </section>
   </body>
 </html>
