feat: Add footer

--- a/src/index.html
+++ b/src/index.html
@@ -135,5 +135,140 @@
         </button>
       </div>
     </section>
+
+    <!-- FOOTER -->
+    <footer class="footer bg-secondary-100">
+      <div class="container">
+        <div class="even-columns">
+          <div class="footer-main">
+            <h3 class="logo footer__title footer__title--primary">
+              Work <span>lyfe</span>
+            </h3>
+            <p>
+              Lorem ipsum dolor amet, consectetur adipiscing elit. Eget nisl
+              nunc quam ac sed turpis volutpat. Cursus sed massa non nisi,
+              placerat.
+            </p>
+            <ul
+              role="list"
+              aria-label="Social links"
+              class="footer-main__social-links"
+            >
+              <li>
+                <a class="footer-main__social-link" href="#">
+                  <img
+                    class="icon"
+                    src="/src/assets/icons/instagram.svg"
+                    alt="Instagram"
+                  />
+                </a>
+              </li>
+              <li>
+                <a class="footer-main__social-link" href="#">
+                  <img
+                    class="icon"
+                    src="/src/assets/icons/dribble.svg"
+                    alt="Dribble"
+                  />
+                </a>
+              </li>
+              <li>
+                <a class="footer-main__social-link" href="#">
+                  <img
+                    class="icon"
+                    src="/src/assets/icons/twitter.svg"
+                    alt="Twitter"
+                  />
+                </a>
+              </li>
+              <li>
+                <a class="footer-main__social-link" href="#">
+                  <img
+                    class="icon"
+                    src="/src/assets/icons/youtube.svg"
+                    alt="Youtube"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-quick-links">
+            <h3 class="footer__title">Quick Links</h3>
+            <nav aria-label="Quick links">
+              <ul class="flow" role="list">
+                <li>
+                  <a href="#">Offices</a>
+                </li>
+                <li>
+                  <a href="#">Timetable</a>
+                </li>
+                <li>
+                  <a href="#">Clubs</a>
+                </li>
+                <li>
+                  <a href="#">Perks</a>
+                </li>
+                <li>
+                  <a href="#">Free trial</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer-guides">
+            <h3 class="footer__title">Guides</h3>
+            <nav aria-label="Guides">
+              <ul class="flow" role="list">
+                <li>
+                  <a href="#">About</a>
+                </li>
+                <li>
+                  <a href="#">Jobs</a>
+                </li>
+                <li>
+                  <a href="#">Applicants</a>
+                </li>
+                <li>
+                  <a href="#">Statements</a>
+                </li>
+                <li>
+                  <a href="#">Privacy </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer-contacts">
+            <h3 class="footer__title">Reach us</h3>
+            <ul role="list" aria-label="Contacts">
+              <li class="d-flex">
+                <img class="icon" src="/src/assets/icons/email.svg" alt="" />
+                <a href="mailto:admin@worklyfe.com"> admin@worklyfe.com </a>
+              </li>
+              <li class="d-flex">
+                <img class="icon" src="/src/assets/icons/phone.svg" alt="" />
+                <span> +88 98765 43210</span>
+              </li>
+              <li class="d-flex">
+                <img class="icon" src="/src/assets/icons/location.svg" alt="" />
+                <span> 90210 Beverly Hills California USA</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-bottom">
+          <div class="even-columns">
+            <div class="footer-bottom__copyright">
+              &copy; 2020 Worklyfe. All rights reserved.
+            </div>
+            <div class="footer-bottom__links">
+              <a class="footer-bottom__link" href="#">Terms & Conditions</a>
+              <a class="footer-bottom__link" href="#">Privacy Policy</a>
+              <a class="footer-bottom__link" href="#">Sitemap</a>
+              <a class="footer-bottom__link" href="#">Disclaimer</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
